--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <header>
       <p>Hello</p>
-      <p>My name is</p>
+      <p>My name is Kate</p>
     </header>
     <main>
       <img src="me.png">
-      <h1>Your name here</h1>
+      <h1>Kate</h1>
       <p>
         Here's a good place to write a little bit about yourself.
         Include anything you want people to know about you.
@@ -26,9 +26,9 @@
       </p>
       <ul class="social">
 
-        <li><a rel="github" href="http://github.com/powershop">My code</a></li>
-        <li><a rel="home" href="http://example.com">My website</a></li>
-        <li><a rel="twitter" href="http://twitter.com/powershop">@powershop</a></li>
+        <li><a rel="github" href="http://github.com/Katiemouse">My code</a></li>
+        <li><a rel="home" href="http://stodtm.Wellington101">Wellington Virtual Tour</a></li>
+        <li><a rel="twitter" href="http://twitter.com/Katiemouse.NNM">Twitter</a></li>
       </ul>
     </main>
     <footer>
