--- a/index.html
+++ b/index.html
@@ -15,15 +15,10 @@
       <img src="me.png">
       <h1>Kate</h1>
       <p>
-	  yo
-        Here's a good place to write a little bit about yourself.
-        Include anything you want people to know about you.
+        My computer is being mean.
       </p>
       <p>
-         Intelligentsia dreamcatcher chartreuse franzen sartorial ugh. Whatever
-         brunch asymmetrical tousled occupy before they sold out, distillery VHS
-         fingerstache salvia church-key readymade listicle. Craft beer skateboard
-         hella, hoodie brooklyn.
+         I have to do everything through the command line.
       </p>
       <ul class="social">
 
