--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>My name is Kate!</p>
     </header>
     <main>
-      <img src="me.png">
+      <img src="Kate.png">
       <h1>Kate</h1>
       <p>
         My computer is being mean.
