--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <img src="Kate.png">
       <h1>Kate</h1>
       <p>
-        My computer is being mean.
+        I am a first year Software Engineering student at Victoria University of Wellington.
       </p>
       <p>
-         I have to do everything through the command line.
+        In 2017 I am planning to take part in the study abroad program and do a year of my degree at La Universitie de la Rochelle in France..
       </p>
       <ul class="social">
 
