--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p>My name is Kate!</p>
     </header>
     <main>
-      <img src="Kate.png">
+      <img src="Kate.PNG">
       <h1>Kate</h1>
       <p>
         I am a first year Software Engineering student at Victoria University of Wellington.
