--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, Summer of Tech!</title>
+    <title>Hello!</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Covered+By+Your+Grace" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="hello.css" rel="stylesheet" type="text/css">
@@ -18,12 +18,12 @@
         I am a first year Software Engineering student at Victoria University of Wellington.
       </p>
       <p>
-        In 2017 I am planning to take part in the study abroad program and do a year of my degree at La Universitie de la Rochelle in France..
+        In 2017 I am planning to take part in the study abroad program and do a year of my degree at La Universitie de la Rochelle in France.
       </p>
       <ul class="social">
 
         <li><a rel="github" href="http://github.com/Katiemouse">My code</a></li>
-        <li><a rel="home" href="http://stodtm.Wellington101">Wellington Virtual Tour</a></li>
+        <li><a rel="home" href="http://stodtm.com/wellington101/">Check out my Virtual Tour of Wellington!</a></li>
         <li><a rel="twitter" href="http://twitter.com/Katiemouse.NNM">Twitter</a></li>
       </ul>
     </main>
