--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <p>Hello</p>
       <p>My name is Kate!</p>
     </header>
+	<nav>
+		<a href="index.html">About Me</a>
+		<a href="cv.php">My CV</a>
+	</nav>
     <main>
       <img src="Kate.PNG">
       <h1>Kate</h1>
