link to cv page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<nav>
 		<a href="index.html">About Me</a>
 		<p>|</p>
-		<a href="cv.php">My CV</a>
+		<a href="cv.html">My CV</a>
 	</nav>
     <main>
       <img src="Kate.PNG">
