--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
 		<a href="cv.html">My CV</a>
 	</nav>
     <main>
-		<h1>Cirriculum Vitae</h1>
+		<h1>Curriculum Vitae</h1>
 		<p>
 			<h2>Relevant Work Experience</h2>
 			<ul>
