--- a/cv.html
+++ b/cv.html
@@ -14,6 +14,7 @@
 	<nav>
 		<a href="index.html">About Me</a>
 		<a href="cv.html">My CV</a>
+		<a href="gallery.html">Gallery</a>
 	</nav>
     <main>
 		<h1>Curriculum Vitae</h1>
@@ -85,6 +86,7 @@
 						<li><h4>Language</h4> I have been learning French for the last 6 years and plan to take part in the Study Abroad program at Victoria, during which I plan to complete a year of my degree at a French University in order to become fluent.</li>
 						<li><h4>Music</h4> I have played the Clarint for 8 years and the Saxophone for 4. I enjoy playing in my spare time and in groups like Jazz bands and Orchestras.</li>
 						<li><h4>Debating</h4> I have been debating for 3 years, and made the St Oran's College Prem A Debating Team in 2015.</li>
+						<li><h4>Photography</h4> I love taking photos of my daily life. This interest was sparked through my Digital Technologies class at school where we learnt about photo design, especially for websites. <a href="gallery.html">Here</a> is a selection of my favourite photos.</li>
 					</ul>
 				</li>
 			</ul>
