--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<nav>
 		<a href="index.html">About Me</a>
 		<a href="cv.html">My CV</a>
+		<a href="gallery.html">Gallery</a>
 	</nav>
     <main>
       <img src="Kate.PNG">
