Link change to pong game

--- a/cv.html
+++ b/cv.html
@@ -32,7 +32,7 @@
 				</li>
 				<li><h3>Catalyst Arduino Academy</h3>
 				This four day course was held in July of 2015 where I, along with seven other students, were picked to learn aboput Arduinos and how they work, as well as how to assemble and code them. On the last day we were given time to work on projects, where my friend and I made together a complex "Pong" Game. <br>
-				<a href="https://github.com/Katiemouse/Pong2015">This</a> was our final code.
+				<a href="https://github.com/Katiemouse/PongGame2015">This</a> was our final code.
 				</li>
 			</ul>
 			<h2>Other Work Experience</h2>
