--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
 		<a href="gallery.html">Gallery</a>
 	</nav>
     <main>
-	<img src="images/photos.jpg">
+		<img src="images/photos (1).jpg">
 	</main>
     <footer>
 	  <a href="http://powershop.co.nz"><img src="winky.svg" alt="Powershop"></a>
