--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,15 @@
 	</nav>
     <main>
 		<img src="images/photos (1).jpg">
+		<img src="images/photos (2).jpg">
+		<img src="images/photos (3).jpg">
+		<img src="images/photos (4).jpg">
+		<img src="images/photos (5).jpg">
+		<img src="images/photos (6).jpg">
+		<img src="images/photos (7).jpg">
+		<img src="images/photos (8).jpg">
+		<img src="images/photos (9).jpg">
+		<img src="images/photos (10).jpg">
 	</main>
     <footer>
 	  <a href="http://powershop.co.nz"><img src="winky.svg" alt="Powershop"></a>
