--- a/gallery.html
+++ b/gallery.html
@@ -17,11 +17,22 @@
 		<a href="gallery.html">Gallery</a>
 	</nav>
     <main>
-		<img src="images/photos (1).jpg"><img src="images/photos (2).jpg">
-		<img src="images/photos (3).jpg"><img src="images/photos (4).jpg">
-		<img src="images/photos (5).jpg"><img src="images/photos (6).jpg">
-		<img src="images/photos (7).JPG"><img src="images/photos (8).JPG">
-		<img src="images/photos (9).JPG"><img src="images/photos (10).JPG">
+		<div id="leftMain"><!-- LEFTMAIN STARTS -->
+			<img src="images/photos (1).jpg">
+			<img src="images/photos (3).jpg">
+			<img src="images/photos (5).jpg">
+			<img src="images/photos (7).JPG">
+			<img src="images/photos (9).JPG">
+		</div><!-- LEFTMAIN ENDS -->
+		<class id="clearfloat">
+		<div id="rightMain"><!-- RIGHTMAIN STARTS -->
+			<img src="images/photos (2).jpg">
+			<img src="images/photos (4).jpg">
+			<img src="images/photos (6).jpg">
+			<img src="images/photos (8).JPG">
+			<img src="images/photos (10).JPG">
+		</div><!-- RIGHTMAIN ENDS -->
+		
 	</main>
     <footer>
 	  <a href="http://powershop.co.nz"><img src="winky.svg" alt="Powershop"></a>
