fixed end bracket and br clearfloat

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
 			<img src="images/photos (7).JPG">
 			<img src="images/photos (9).JPG">
 		</div><!-- LEFTMAIN ENDS -->
-		<class id="clearfloat">
+		<br id="clearfloat">
 		<div id="rightMain"><!-- RIGHTMAIN STARTS -->
 			<img src="images/photos (2).jpg">
 			<img src="images/photos (4).jpg">
@@ -32,7 +32,7 @@
 			<img src="images/photos (8).JPG">
 			<img src="images/photos (10).JPG">
 		</div><!-- RIGHTMAIN ENDS -->
-		
+		<br id="clearfloat">
 	</main>
     <footer>
 	  <a href="http://powershop.co.nz"><img src="winky.svg" alt="Powershop"></a>
