kate picture float right

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a href="gallery.html">Gallery</a>
 	</nav>
     <main>
-      <img src="Kate.PNG">
+      <img src="Kate.PNG" id="imageright">
       <h1>Kate</h1>
       <p>
         I am a first year Software Engineering student at Victoria University of Wellington.
