--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         I am a first year Software Engineering student at Victoria University of Wellington.
       </p>
       <p>
-        In 2017 I am planning to take part in the study abroad program and do a year of my degree at La Universitie de la Rochelle in France.
+        In 2017 I am planning to take part in the study abroad program and do a year of my degree at the University of Surrey in England.
       </p>
       <ul class="social">
 
         <li><a rel="github" href="http://github.com/Katiemouse">My code</a></li>
-        <li><a rel="home" href="http://stodtm.com/wellington101/">Check out my Virtual Tour of Wellington!</a></li>
+        <li><a rel="home" href="http://stodtm.com/wellington101/">Check out my Virtual Tour of Wellington! (This is currently under maintenance.)</a></li>
         <li><a rel="twitter" href="http://twitter.com/Katiemouse.NNM">Twitter</a></li>
       </ul>
     </main>
